--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -14,45 +14,7 @@
 <body>
 
 
-
-	<header>
 	
-		<div class="container">
-			<div class="row header-nav">
-				<div class="col-md-3 text-left nav-item">
-					<a href="<%= root_path %>">
-					 	<%= image_tag "logo-sample.png" %>
-					</a>
-				</div>
-	
-				<div class="col-md-6 text-center nav-item">
-					<ul class="list-inline list-styled header-list">
-						<li><a href="">Apps</a></li>
-						<li><a href="">Gadgets</a></li>
-						<li><a href="">Science</a></li>
-						<li><a href="">Nature</a></li>
-						<li><a href="#">Creative</a></li>
-					</ul>
-				</div>
-	
-				<div class="col-md-3 text-right nav-item">
-					<button class="btn btn-default">Sign Up</button>
-					<div class="header-dropdown">
-						<a href="#" data-toggle="dropdown">
-							<%= image_tag "dropdown-icon.png" %>
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="dLabel">
-							<li><a href="">Settings</a></li>
-							<li><a href="">Profile</a></li>
-							<li><a href="">Security</a></li>
-							<li><a href="">Log Out</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	
-	</header>
 <div class="section-tabs">
 	<div class="container">
 		<div class="row">
@@ -207,44 +169,9 @@
 			</div>
 		</div>
 	</div>
-</section><footer>
+</section>
 
-	<div class="container">
-		<div class="row header-nav">
-			<div class="col-md-6 text-left nav-item footer-item">
-				<a href="#"><%= image_tag "footer-logo.png" %></a>
-				<p>&copy; 2016 Great Simple All rights reserved</p>
-			</div>
 
-			<div class="col-md-6 text-right nav-item">
-				<ul class="list-inline list-styled footer-list">
-					<li><a href="#">Stories</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Work</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-</header>	
-	<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
-	<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-	<script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-	 <script>
-		  $(function() {
-		    $( "#accordion" ).accordion({
-		    	 heightStyle: "content"
-		    });
-		  });
-  </script>
-  <script>
-  /*$(function() {
-    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
-  });*/
-  </script>
 
 	<!-- toolkit scripts -->
 
