--- a/app/views/search/advanced.html.erb
+++ b/app/views/search/advanced.html.erb
@@ -1,5 +1,4 @@
 
-<br><br><br>
     <!-- Page Content -->
     <div class="container">
 
@@ -10,7 +9,7 @@
                     <small>...</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">Search</a>
                     </li>
                     <li class="active">Advanced</li>
                 </ol>
