--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -12,20 +12,21 @@
         <div class="row">
           
           <div class="col-xs-6 center-block text-center">
-            <h1>Find a store</h1>
+            <h1>Find a business</h1>
             <h4 class="vert-offset-top-1">Don’t miss out on the latest deals & more add us to your inbox to get newest deals exclusives</h4>
             
-            <div class="input-group vert-offset-top-3 vert-offset-bottom-9 hero-search-input">
-              <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button">
-                <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </span>
-              </div><!-- /input-group -->
+              <%= form_tag("/search/index", method: "get") do %>
+                <div class="input-group vert-offset-top-3 vert-offset-bottom-9 hero-search-input">
+                  <%= text_field_tag :query, params[:query], :required => true,class: "form-control", id: "business_search", placeholder: "Search for ...", autocomplete: "off" %>
+                  <span class="input-group-btn">
+                    <%= button_tag(type: "submit", class: "btn btn-default") do %>
+                      <i class="fa fa-search" aria-hidden="true"></i>
+                    <% end %>
+                  </span>
+                </div><!-- /input-group -->
+              <% end %>
               
-            </div>
-            
+            </div>            
           </div>
         </div>
       </div><div class="section-tabs">
@@ -67,7 +68,7 @@
           </div>
         </div>
         <% end %>
-        <div class="col-xs-12 text-center"><a href="#" class="h6">View All ></a></div>
+        <div class="col-xs-12 text-center"><%= link_to "View All >", businesses_path ,class: "h6" %></div>
       </div>
     </div>
   </section><section class="like-products">
