--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -52,6 +52,11 @@
 					<h5 class="vert-offset-top-1">Your neighbourhood search engine YP.ca helps you easily access local listings for 1.5 million businesses across Canada.</h5>
 				</div>
 			</div>
+
+
+
+
+    <%= form_tag("/search/filter", method: "get") do %>
 			<div class="row vert-offset-top-6">
 				<div class="col-xs-4">
 					<div class="filter-aside">
@@ -61,28 +66,30 @@
 						</div>
 
 						<div class="padding-20 border-bottom">
-							<h6 class="strong">Brand</h6>
+							<h6 class="strong">Category</h6>
 							<ul class="list-inline brand-ul">
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li>
-								<li><a href="" class="active">Apple</a></li>
-								<li><a href="">Apple</a></li> <br>
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li> <br>
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li>
-								<li><a href="">Apple</a></li>
+	              <% @categories= Category.all.map(&:name) %>
+								<%= select_tag :category, options_for_select(@categories), class: "form-control" %>
 							</ul>
+							<h6 class="strong">City</h6>
+							<ul class="list-inline brand-ul">
+	              <% @cities = City.all %>
+								<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name"), class: "form-control" %>
+							</ul>
+							<ul class="list-inline brand-ul">
+              	<%= check_box_tag(:open, class: "form-control") %>
+								<%= label_tag(:open, "Open") %>
+							</ul>		
 						</div>
 						<div class="padding-20 border-bottom">
 							<p>
-							  <label for="amount" class="filter-label">Price range:</label>
+							  <label for="amount" class="filter-label">Rate range:</label>
 								<div class="range-input">
-									<h6 class="strong">from</h6><input type="text" class="from-amount-range filter-input"><h6 class="strong">to</h6><input type="text" class="to-amount-range filter-input">
+									<h6 class="strong">from</h6>
+									<%= text_field :rate_min,nil ,class: "from-amount-range filter-input" %>
+									<h6 class="strong">to</h6>
+									<%= text_field :rate_max,nil ,class: "to-amount-range filter-input" %><i class="fa fa-star" aria-hidden="true"></i>
 								</div>
-							  <input type="text" id="amount" readonly style="border:0; color:#f6931f;">
 							</p>						 
 							<div id="slider-range"></div>
 						</div>
@@ -90,46 +97,39 @@
 						<div id="accordion">
 							  <h6 class="strong">Operation System <span class="bs-caret"><span class="caret"></span></span></h6>
 							  <div>
-							    <p>Mauris mauris ante, blandit et, ultrices a, susceros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.</p>
+							    <p>Oparation System</p>
 							  </div>
 							  <h6 class="strong">Material <span class="bs-caret"><span class="caret"></span></span></h6>
 							  <div>
-							    <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
-							  </div>
-							  <h6 class="strong">Camera <span class="bs-caret"><span class="caret"></span></span></h6>
-							  <div>
-							    <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui. </p>
-							    <ul>
-							      <li>List item</li>
-							      <li>List item</li>
-							      <li>List item</li>
-							      <li>List item</li>
-							      <li>List item</li>
-							      <li>List item</li>
-							      <li>List item</li>
-							    </ul>
-							  </div>
-							   <h6 class="strong">Other Options <span class="bs-caret"><span class="caret"></span></span></h6>
-							  <div>
-							    <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
+							    <p>Material</p>
 							  </div>
 						</div>
 
 						<div class="padding-20 border-bottom text-center filter-button">
-							<button class="btn btn-background">Apply Filter</button>
+							<button type="submit" class="btn btn-background" style="margin-left:30px">
+								Apply Filter
+							</button>
 						</div>
 
 					</div>
 				</div>
+      <% end %>
+
+
+
 				<div class="col-xs-8">
 
 				<% unless @businesses.blank? %>
 				 <% @businesses.each do |business| %>
 					<div class="col-xs-6">
 						<div class="thumbnail">
-					    <img src="http://lorempixel.com/400/290/food/6" alt="...">
+					    <% if business.logo.blank? %>
+								<%= image_tag "nologo.png", width: "80%", height: "90px"%>
+							<% else %>
+								<%= image_tag business.logo_url, width: "80%", height: "90px"%>
+							<% end %>
 					    <div class="caption">
-					      <h4><%= business.name %></h4>
+					      <h4><%= link_to business.name, business_path(business) %></h4>
 					      <h6><%= business.description %></h6>
 					      <div class="vert-offset-top-2"></div>		        
 					      <ul class="list-inline likes-ul">
@@ -143,7 +143,13 @@
 					  </div>
 					</div>
 					<% end %>
-				<% end %>	
+				<% else %>
+					<div class="alert alert-danger" role="alert">
+					  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+					  <span class="sr-only">Error:</span>
+					  Not found another business
+					</div>
+				<% end %>
 				</div>	
 			</div>
 	</div>
@@ -171,7 +177,24 @@
 	</div>
 </section>
 
-
+	
+	<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+	<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+	<script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+	 <script>
+		  $(function() {
+		    $( "#accordion" ).accordion({
+		    	 heightStyle: "content"
+		    });
+		  });
+  </script>
+  <script>
+  /*$(function() {
+    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+  });*/
+  </script>
 
 	<!-- toolkit scripts -->
 
