Added js to single page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,6 +3,8 @@
 *= require jquery-ui
 */
 
+/*@import "paginate.css";*/
+@import "toolkit.css";
 
 .ui-autocomplete {
   max-height: 100px;
@@ -197,10 +199,6 @@ img:hover {
 
 
 
-  body {
-    padding-top: 15px;
-    font-size: 12px
-  }
   .main {
     max-width: 320px;
     margin: 0 auto;
