--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -82,7 +82,7 @@
     <div class="row view-items ">
       <div class="col-xs-4">
         <div class="thumbnail">
-          <img src="http://lorempixel.com/400/290/food/5" alt="...">
+          <%= image_tag 'food1.png' %>
           <div class="caption">
             <h4>Cherry Tomato Salad</h4>
             <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell  a special treat a special treat a special treat a special treattoo</h6>
@@ -100,7 +100,7 @@
       </div>
       <div class="col-xs-4">
         <div class="thumbnail">
-          <img src="http://lorempixel.com/400/290/food/6" alt="...">
+          <%= image_tag 'food2.png' %>
           <div class="caption">
             <h4>Cherry Tomato Salad</h4>
             <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
@@ -118,7 +118,7 @@
       </div>
       <div class="col-xs-4">
         <div class="thumbnail">
-          <img src="http://lorempixel.com/400/290/food/7" alt="...">
+        <%= image_tag 'food3.png' %>
           <div class="caption">
             <h4>Cherry Tomato Salad</h4>
             <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
@@ -139,7 +139,7 @@
   </div>
 </section>
 
-<%= render 'layouts/payment' %>
+<%= render 'payment' %>
 <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
 <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
