--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="ROBOTS" content="NOODP" />
-  <meta name="viewport" content="initial-scale=1" />
-  <%#
+  <head>
+    <meta charset="utf-8" />
+    <meta name="ROBOTS" content="NOODP" />
+    <meta name="viewport" content="initial-scale=1" />
+    <%#
     Configure default and controller-, and view-specific titles in
     config/locales/en.yml. For more see:
     https://github.com/calebthompson/title#usage
-  %>
-
-    <%= stylesheet_link_tag "application", media: "all" %>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "jquery.rateyo.css", media: "all" %>
-
-
-    <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
-    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
-
-    
-    <!-- inside javascript -->
-    <%= javascript_include_tag 'jquery.js', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'jquery_ujs.js', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'jquery.rateyo.js', 'data-turbolinks-track' => true %>
-
-    <%= favicon_link_tag 'YPIcon.ico' %>
-    <%= stylesheet_link_tag "toolkit.css" %>
-    <%= javascript_include_tag "toolkit.js" %>
-
+    %>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,53 +16,38 @@
     <meta name="author" content="">
     
     <title>Yellow Page</title>
-     
-    <!-- Bootstrap Core CSS -->
-   
+    
+    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+    <%= stylesheet_link_tag "application", media: "all" %>
+    <%= stylesheet_link_tag "jquery.rateyo.css", media: "all" %>
+    <%= stylesheet_link_tag "toolkit.css", media: "all" %>
+    <%= csrf_meta_tags %>    
+    <%= favicon_link_tag 'YPIcon.ico' %>
 
     <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
-
     
-    <!-- inside javascript -->
-   
- 
-
+    
+    <%= javascript_include_tag 'jquery.js' %>
+    <%= javascript_include_tag 'jquery_ujs.js' %>
+    <%= javascript_include_tag 'jquery.rateyo.js'%>
+    <%= javascript_include_tag 'toolkit.js'%>
+    
     <%# javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
-     
-
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <title><%= title %></title>
-
-</head>
+    <!-- <title><%= title %></title> -->
+  </head>
   <body class="<%= body_class %>">
     <%= render "layouts/header" %>
     <%# render "flashes" -%>
     <%= yield %>
     <%= render "javascript" %>
     <%= render "layouts/footer" %>
-
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
-    <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-     <script>
-          $(function() {
-            $( "#accordion" ).accordion({
-                 heightStyle: "content"
-            });
-          });
-  </script>
-  <script>
-  $(function() {
-    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
-  });
-  </script>
-    
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
   </body>
 </html>
