--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/sign_in' %>
 
-<header>     
+<header class="<%= 'single-header' if controller_name == 'businesses' && action_name == 'show'%>">     
   <div class="container">
     <div class="row header-nav">
       <div class="col-md-3 text-left nav-item">
