--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,8 @@
     <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
     
     
-    <%= javascript_include_tag 'jquery.js' %>
-    <%= javascript_include_tag 'jquery_ujs.js' %>
+    <% javascript_include_tag 'jquery.js' %>
+    <% javascript_include_tag 'jquery_ujs.js' %>
     <%= javascript_include_tag 'jquery.rateyo.js'%>
     <%= javascript_include_tag 'toolkit.js'%>
     
@@ -49,5 +49,18 @@
     <%= render "javascript" %>
     <%= render "layouts/footer" %>
     <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+    <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+    <script>
+    $(function() {
+    $( "#accordion" ).accordion({
+    heightStyle: "content"
+    });
+    });
+    </script>
+    <script>
   </body>
 </html>
