--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,20 +1,8 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
-        
-        <!-- toolkit styles -->
-        <%= stylesheet_link_tag "toolkit.css", media: "all" %>
-        <!-- /toolkit styles -->
-    </head>
-    <body>
+
         <div class="single-hero">
             <div class="container">
-                <div class="row">
-                    
-                    <div class="col-xs-6 single-hero-title"><h2>Jamie XX</h2></div>
+                <div class="row">                    
+                    <div class="col-xs-6 single-hero-title"><h2><%= @business.name %></h2></div>
                 </div>
             </div>
         </div>
@@ -23,10 +11,10 @@
                 <div class="row">
                     
                     <div class="col-md-12">
-                        <ul class="list-inline filter-ul" >
-                            <li><h5 class="roboto"><a href="#">Womens accessorises</a></h5></li>
+                        <ul class="list-inline filter-ul">
+                            <li><h5 class="roboto"><a href="#">Business</a></h5></li>
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
-                            <li><h5 class="roboto"><a href="#">Scarves</a></h5></li>
+                            <li><h5 class="roboto"><a href="#"><%= @business.name %></a></h5></li>
                         </ul>
                     </div>
                 </div>
@@ -39,12 +27,20 @@
                         
                         <div class="col-xs-12">
                             <ul class="single-details-ul">
-                                <li><h6>Address</h6></li>
-                                <li><p>9146 S Sepulveda Blvd, Los Angeles, CA 90045</p></li>
+                                <% unless @business.addresses.each %>
+                                    <li><h6>Address</h6></li>
+                                    <% @business.address do |address| %>                               
+                                        <li><p><%= address.name %></p></li>
+                                    <% end %>
+                                <% end %>
                             </ul>
                             <ul class="single-details-ul">
-                                <li><h6>Contact</h6></li>
-                                <li><p>(424) 354-0228</p></li>
+                                <% unless @business.phones.blank? %>
+                                    <li><h6>Contact</h6></li>
+                                    <% @business.phones do |phone| %>
+                                        <li><p><%= phone.type %></p> <p><%= phone.number_phone %></p></li>
+                                    <% end %>
+                                <% end %>
                             </ul>
                             <a href="" class="pull-right strong"><i class="fa fa-picture-o vert-offset-right-1" aria-hidden="true"></i>Watch gallery</a>
                         </div>
@@ -263,26 +259,4 @@
         </div>
     </div>
     
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
-    <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-    <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
-    <script>
-    $(function() {
-    $( "#accordion" ).accordion({
-    heightStyle: "content"
-    });
-    });
-    </script>
-    <script>
-    /*$(function() {
-    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-    " - $" + $( "#slider-range" ).slider( "values", 1 ) );
-    });*/
-    </script>
-    <!-- toolkit scripts -->
-    <%= javascript_include_tag 'toolkit.js'%>
-    <!-- /toolkit scripts -->
-</body>
-</html>
+   
