--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -68,7 +68,7 @@
           </div>
         </div>
         <% end %>
-        <div class="col-xs-12 text-center"><%= link_to "View All >", businesses_path ,class: "h6" %></div>
+        <div class="col-xs-12 text-center vert-offset-top-4"><%= link_to "View All >", businesses_path ,class: "h6" %></div>
       </div>
     </div>
   </section><section class="like-products">
@@ -134,29 +134,13 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 text-center"><a href="#" class="btn btn-gray">View All ></a></div>
+      <div class="col-xs-12 text-center vert-offset-top-4"><a href="#" class="btn btn-gray">View All <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
     </div>
   </div>
 </section>
 
 <%= render 'payment' %>
-<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
-<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-<script>
-$(function() {
-$( "#accordion" ).accordion({
-heightStyle: "content"
-});
-});
-</script>
-<script>
-/*$(function() {
-$( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-" - $" + $( "#slider-range" ).slider( "values", 1 ) );
-});*/
-</script>
+
 <!-- toolkit scripts -->
 <!-- /toolkit scripts -->
 </body>
