Added some new design for login and register forms and also integrated autocomplete at search field

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/sign_in' %>
+<%#= render 'layouts/sign_in' %>
 
 <header class="<%= 'single-header' if controller_name == 'businesses' && action_name == 'show'%>">     
   <div class="container">
@@ -12,7 +12,7 @@
           <li><a href="">Apps</a></li>
           <li>
             <%= link_to  search_advanced_path do %>
-              Advanced Serach
+              Advanced Search
             <% end %>
           </li>
           <li>
@@ -27,7 +27,11 @@
       <div class="col-md-3 text-right nav-item">         
 
         <% if !current_user %>
-        <li><button type="button" class="btn btn-default navbar-btn" style="margin-right:10px;" data-toggle="modal" data-target="#SigninModal">Sign in</button></li>
+        <li>
+         <%= link_to new_user_session_path do %>
+          <button type="button" class="btn btn-default navbar-btn" style="margin-right:10px;">Sign In</button>
+        <% end %>
+        </li>
         <% else %>
          <div class="header-dropdown">
           <a href="#" data-toggle="dropdown">
