--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,22 @@
-
- <br><br>          
-      <div class="main">
-              <h3>Please Log In, or <a href="#">Sign Up</a></h3>
-              <div class="login-or">
-                <hr class="hr-or">
-                <span class="span-or">or</span>
-              </div>
+ <div id="wrapper">
+    <div class="join">Join Today</div>
+            <div class="clr"></div>
             <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                <%= f.error_notification %>
-                <div class="form-inputs">
-                    <%= f.input :email, required: true, autofocus: true %>
-                    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)%>
-                    <%= f.input :password_confirmation, required: true %>
-                   <div class="pull-right">
-                  	<%= f.button :submit, "Sign up" %>
-	              	<%- if controller_name != 'sessions' %>
-					  <%= link_to "Log in", new_session_path(resource_name) %><br />
-					<% end -%>  
-	               </div>      
-                </div>                         
-             </div>         
-          <% end %>
-      </div>
+                    <div class="forms">
+                    
+                     <%= f.input :email, autofocus: true,  placeholder: "Your email address"; %>
+                     <%= f.input :password, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), placeholder: "Your password "; %>
+                     <%= f.input :password_confirmation,  placeholder: "Again your password";  %>
+                    
+                    </div>
+                 <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+                    <i class="icon-ok icon-white"></i> Create Account  
+                <% end %>  or 
+                        <%= link_to "Login", new_user_session_path %>
+              <% end %>          
+</div>  
+    
+    
+    
+    
+    
