--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -140,8 +140,24 @@
 </section>
 
 <%= render 'payment' %>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
 
 <!-- toolkit scripts -->
 <!-- /toolkit scripts -->
+<script>
+$(function() {
+     $( "#business_search" ).autocomplete({
+    <% ac_businesses = Business.all %>
+     source: [
+      <%ac_businesses.each do |b| %>
+     { label: "<%= b.name %>", value: "<%=b.name %>" },
+     <% end %>
+     ]
+     });
+   });   
+</script>
 </body>
 </html>
