--- a/app/views/businesses/_gallery.html.erb
+++ b/app/views/businesses/_gallery.html.erb
@@ -1,12 +1,5 @@
-<div class="container" style="padding:50px;">
-    <div class="msg"><span class="glyphicon glyphicon-ok"></span> Gallery</div>
-    <div class="col-lg-12">
-        <ul id="myTab" class="nav nav-tabs nav-justified">
-            <li class="active"><a href="#service-one" data-toggle="tab"><i class="fa fa-camera fa-4x"></i></a>
-        </li>
-        <li class=""><a href="#service-two" data-toggle="tab"><i class="fa fa-film fa-4x"></i></a>
-    </li>
-</ul>
+<div class="container">
+<div class="col-lg-11">
 <div id="myTabContent" class="tab-content">
      <div class="tab-pane fade active in" id="service-one"><br><br>
         <div class="row">
